# scapix

./: CMakeLists.txt  LICENSE.txt  README.md
java_api/android-28/scapix/java_api/android/: Manifest.h  Manifest_permission.h  Manifest_permission_group.h  R.h  R_anim.h  R_animator.h  R_array.h  R_attr.h  R_bool.h  R_color.h  R_dimen.h  R_drawable.h  R_fraction.h  R_id.h  R_integer.h  R_interpolator.h  R_layout.h  R_menu.h  R_mipmap.h  R_plurals.h  R_raw.h  R_string.h  R_style.h  R_transition.h  R_xml.h
java_api/android-28/scapix/java_api/android/accessibilityservice/: AccessibilityButtonController.h  AccessibilityButtonController_AccessibilityButtonCallback.h  AccessibilityService.h  AccessibilityServiceInfo.h  AccessibilityService_GestureResultCallback.h  AccessibilityService_MagnificationController.h  AccessibilityService_MagnificationController_OnMagnificationChangedListener.h  AccessibilityService_SoftKeyboardController.h  AccessibilityService_SoftKeyboardController_OnShowModeChangedListener.h  FingerprintGestureController.h  FingerprintGestureController_FingerprintGestureCallback.h  GestureDescription.h  GestureDescription_Builder.h  GestureDescription_StrokeDescription.h
java_api/android-28/scapix/java_api/android/accounts/: AbstractAccountAuthenticator.h  Account.h  AccountAuthenticatorActivity.h  AccountAuthenticatorResponse.h  AccountManager.h  AccountManagerCallback.h  AccountManagerFuture.h  AccountsException.h  AuthenticatorDescription.h  AuthenticatorException.h  NetworkErrorException.h  OnAccountsUpdateListener.h  OperationCanceledException.h
java_api/android-28/scapix/java_api/android/animation/: Animator.h  AnimatorInflater.h  AnimatorListenerAdapter.h  AnimatorSet.h  AnimatorSet_Builder.h  Animator_AnimatorListener.h  Animator_AnimatorPauseListener.h  ArgbEvaluator.h  BidirectionalTypeConverter.h  FloatArrayEvaluator.h  FloatEvaluator.h  IntArrayEvaluator.h  IntEvaluator.h  Keyframe.h  LayoutTransition.h  LayoutTransition_TransitionListener.h  ObjectAnimator.h  PointFEvaluator.h  PropertyValuesHolder.h  RectEvaluator.h  StateListAnimator.h  TimeAnimator.h  TimeAnimator_TimeListener.h  TimeInterpolator.h  TypeConverter.h  TypeEvaluator.h  ValueAnimator.h  ValueAnimator_AnimatorUpdateListener.h
java_api/android-28/scapix/java_api/android/annotation/: SuppressLint.h  TargetApi.h
java_api/android-28/scapix/java_api/android/app/: ActionBar.h  ActionBar_LayoutParams.h  ActionBar_OnMenuVisibilityListener.h  ActionBar_OnNavigationListener.h  ActionBar_Tab.h  ActionBar_TabListener.h  Activity.h  ActivityGroup.h  ActivityManager.h  ActivityManager_AppTask.h  ActivityManager_MemoryInfo.h  ActivityManager_ProcessErrorStateInfo.h  ActivityManager_RecentTaskInfo.h  ActivityManager_RunningAppProcessInfo.h  ActivityManager_RunningServiceInfo.h  ActivityManager_RunningTaskInfo.h  ActivityManager_TaskDescription.h  ActivityOptions.h  AlarmManager.h  AlarmManager_AlarmClockInfo.h  AlarmManager_OnAlarmListener.h  AlertDialog.h  AlertDialog_Builder.h  AliasActivity.h  AppComponentFactory.h  AppOpsManager.h  AppOpsManager_OnOpChangedListener.h  Application.h  ApplicationErrorReport.h  ApplicationErrorReport_AnrInfo.h  ApplicationErrorReport_BatteryInfo.h  ApplicationErrorReport_CrashInfo.h  ApplicationErrorReport_RunningServiceInfo.h  AutomaticZenRule.h  (+108 more)
project/cmake/: CMakeLists.txt
project/cmake/modules/: scapix.cmake
source/com/scapix/: Bridge.java  Function.java  NativeException.java
source/experimental/: type_traits
source/scapix/: config.h  java_api.h
source/scapix/bridge/: object.h  type_traits.h
source/scapix/bridge/cpp/: object.h
source/scapix/bridge/cs/: Object.cs  init.h  object.h
source/scapix/bridge/java/: function.h  init.h  module.h  object.h  on_load.h
source/scapix/bridge/js/: init.h  object.h
source/scapix/bridge/objc/: BridgeObject.h  BridgeObject.mm  BridgeObjectPrivate.h  init.h  object.h
source/scapix/bridge/python/: init.h  object.cpp  object.h
source/scapix/core/: cast.h  fixed_string.h  function_traits.h  macros_pop.h  macros_push.h  remove_function_qualifiers.h  tuple.h  type_traits.h  value_list.h
source/scapix/core/meta/: any_of.h  for_each.h  iota.h  transform.h
source/scapix/core/warning/: inaccessible_base.h  pop.h
source/scapix/detail/warning/: inaccessible_base.h  pop.h
source/scapix/jni/: array.h  byte_buffer.h  cast.h  class.h  class_loader.h  convert.h  element.h  env.h  function.h  local_frame.h  lock.h  module.h  monitor.h  native_method.h  object.h  object_base.h  object_impl.h  object_traits.h  ref.h  signature.h  string.h  struct.h  throwable.h  type_traits.h  vm.h  vm_exception.h
source/scapix/jni/com/scapix/: bridge.h  function.h  native_exception.h
source/scapix/jni/detail/: api.h  exception.cpp  exception.h  init.h  util.h
source/scapix/jni/detail/api/: array.h  call.h  ref.h  string.h  type.h
source/scapix/jni/fwd/: array.h  byte_buffer.h  class.h  element.h  native_method.h  object.h  object_base.h  object_impl.h  ref.h  signature.h  string.h  throwable.h
source/scapix/link/cs/: API.cs  api.cpp  api.h  api_base.h  array.h  convert.h  exception.h  function.h  object.h  ref.h  ref_type.h  string.h  struct.h  type_traits.h
source/scapix/link/java/: array.h  byte_buffer.h  cast.h  class.h  class_loader.h  class_name.h  convert.h  env.h  function.h  init.h  local_frame.h  lock.h  module.h  monitor.h  native_method.h  object.h  object.ipp  object_base.h  object_impl.h  object_traits.h  ref.h  signature.h  string.h  struct.h  thread.h  throwable.h  type_traits.h  vm.h  vm_exception.h
source/scapix/link/java/detail/: api.h  config.h  env.h  exception.cpp  exception.h  native_exception.h  util.h
source/scapix/link/java/fwd/: array.h  byte_buffer.h  class.h  native_method.h  object.h  object_base.h  object_impl.h  ref.h  signature.h  string.h  throwable.h
source/scapix/link/js/: bind.h  convert.h  struct.h  type_traits.h
source/scapix/link/objc/: convert.h  struct.h
source/scapix/meta/: any_of.h  for_each.h  iota.h  string.h  transform.h
source/scapix/mpv/: replace.h  transform.h
(+4854 files in other folders)
